# pyspect

./: .gitmodules  README.md  mkdocs.yml  mypy.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pages.yaml  release.yaml
docs/: get_started.md  index.md  requirements.txt
docs/implementations/: axes.md  base.md  debug.md  hj_reachability.md  plotly.md  zonoOpt.md
docs/implementations/dev/: axes.md  base.md  debug.md  plotly.md
docs/papers/: cdc25.ipynb
docs/reference/: logics.md  primitives.md  set_builder.md  tlt.md
docs/tutorials/: get_started.ipynb  set_builder_guide.md  set_builders.ipynb
examples/: 4-way HJ.ipynb  cdc25.ipynb  cdc25_debug.py  debug_error_cases.ipynb  demo.ipynb  hz.ipynb  hz_demo.py  hz_ig.ipynb  polytope_set.ipynb  sidewalk_demo.ipynb  test.py
scripts/: refresh_tutorial_notebooks.sh
src/__hj_reachability/: solver.py
src/__hj_reachability/systems/: __init__.py  bicycle5d_circular.py  electric_vehicle.py
src/hj_reachability/: shapes.py  solver.py
src/hj_reachability/systems/: __init__.py  double_integrator.py
src/hz_reachability/: auxiliary_operations.py  hz_impl.py  sets.py  shapes.py  spaces.py  visualizer.py
src/hz_reachability/systems/: cars.py  integrators.py
src/optimized_dp/: solver_sparse.py
src/pyspect/: __init__.py  idict.py  logics.py  primitives.py  set_builder.py  tlt.py
src/pyspect/_primitives/: base.py  propositional.py
src/pyspect/impls/: axes.py  base.py  debug.py  hj_reachability.py  hz_reachability.py  networkx.py  plotly.py  protos.py  static.py  str.py  zonoopt.py
src/pyspect/impls/dev/: base.py  plotly.py  sets.py
src/pyspect/langs/: base.py  ltl.py  propositional.py  tools.py
src/pyspect/plotting/: levelset_shapes.py  levelsets.py  zonotopes.py
src/pyspect/primitives/: base.py  ltl.py  propositional.py  tools.py
src/pyspect/systems/hj_reachability/: air3d.py  bicycle5d.py  bicycle5d_circular.py  double_integrator.py  electric_vehicle.py  single_integrator.py
src/pyspect/utils/: __init__.py
