[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyspect"
authors = [
  { name="Kaj Munhoz Arfvidsson", email="kajarf@kth.se" },
]
description = "Python Specification and Control with Temporal Logic Trees"
keywords = ["temporal logic", "reachability", "control"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
]

# Version comes from VCS tags (set tags like v0.2.1)
dynamic = ["version"]

dependencies = [
  "plotly",
]

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocs-shadcn",
  "mkdocstrings[python]",
  "pymdown-extensions"
]
hj_reachability = ["hj_reachability>=0.7,<0.8"]
zonoopt = ["zonoopt"]

[project.urls]
Homepage = "https://kth-sml.github.io/pyspect"
Repository = "https://github.com/kth-sml/pyspect.git"
Issues = "https://github.com/kth-sml/pyspect/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pyspect"]

[tool.hatch.build.targets.sdist]
include = [
  "src/pyspect/**",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]
